[BMG] GSC FW missing from upstream
There's no GSC FW for BMG in upstream, only for LNL: https://git.kernel.org/pub/scm/linux/kernel/git/firmware/linux-firmware.git/tree/xe
So users see warnings like this in their dmesg, as they cannot install FW for it:
xe 0000:96:00.0: [drm] gsccs disabled due to lack of FW
Edited by Eero Tamminen